--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <style>
       body { margin: 0; }
       canvas { width: 100%; height: 100% }
+      #client-id {position: absolute; top: 0; left: 0; color: white; padding: .5em;}
     </style>
   </head>
   <body>
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
-
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/StereoEffect.js"></script>
     <script src="js/main.js"></script>
   </body>
