--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="node_modules/three/build/three.js"></script>
     <script src="node_modules/three/examples/js/controls/DeviceOrientationControls.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/NodeFlyControls.js"></script>
     <script src="js/StereoEffect.js"></script>
     <script src="js/main.js"></script>
   </body>
